added toml support and crates integration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,9 @@
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"matklad.rust-analyzer",
-		"vadimcn.vscode-lldb"
+		"vadimcn.vscode-lldb",
+		"tamasfe.even-better-toml",
+		"serayuzgur.crates"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
